--- a/SupplyLocationBoot/src/main/resources/application.properties
+++ b/SupplyLocationBoot/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8080
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
 
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=group_id
