Changes to serialization, trip info:
1. Added snake case to json serialization;
2. Extended TripForDB with Address field;

Signed-off-by: Hlib Pylypets <pilipets.gleb@gmail.com>

--- a/SupplyLocationBoot/src/main/resources/application.properties
+++ b/SupplyLocationBoot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
+
+spring.jackson.property-naming-strategy=SNAKE_CASE
 
 spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=group_id
